# youtube-downloader

./: .gitignore  BRIEF.md  CLAUDE.md  DECISIONS.md  PLAN.md  README.md  pyproject.toml
.claude/skills/code-review/: SKILL.md
.claude/skills/code-review/protocols/: INDEX.md  concurrency.md  data-integrity.md  error-contract.md  memory.md  performance.md  resource-lifecycle.md  security-boundary.md
.claude/skills/lite-dev/: SKILL.md
.claude/skills/lite-init/: SKILL.md
.claude/skills/lite-init/templates/: BRIEF.md  DECISIONS.md  PLAN.md
.github/workflows/: pages.yml
cli/ytdl/: main.py
proxy/: Dockerfile  app.py  fly.toml  requirements.txt
templates/: DECISIONS.md
web/: index.html
