[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytdl"
version = "0.1.0"
description = "YouTube downloader CLI — wraps yt-dlp for single-video downloads"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
]

[project.scripts]
ytdl = "ytdl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli/ytdl"]
